<resources>
    <string name="address">Address</string>
    <string name="app_name">DDScanner</string>
    <string name="billingActivityTitle">Billing details</string>
    <string name="btnBookNow">BOOK NOW</string>
    <string name="btnRetry">RETRY</string>
    <string name="conditionsActivityTitle">Conditions</string>
    <string name="cardNumber">Card number</string>
    <string name="cardHolderName">Name on card</string>
    <string name="cardMonth">Month</string>
    <string name="cardYear">Year</string>
    <string name="cardCCVCode">Year</string>
    <string name="depthPlace">DEPTH</string>
    <string name="placeOrder">PAY</string>
    <string name="noteConditions">Note</string>
    <string name="conditionsTotal">TOTAL</string>
    <string name="selectCity">Select a city</string>
    <string name="divingLevel">Select your diving level</string>
    <string name="bookingSuccessfull">Booking successfully completed</string>
    <string name="description">Description</string>
    <string name="userName">NAME</string>
    <string name="rating">Rating</string>
    <string name="from">FROM</string>
    <string name="explore">EXPLORE</string>
    <string name="optionTitle">TITLE</string>
    <string name="optionDuration">Duration</string>
    <string name="startTime">Start time</string>
    <string name="btnChoseOption">CHOSE THIS OPTION</string>
    <string name="offers">Offers</string>
    <string name="pleaseWait">Please wait</string>
    <string name="errorConnection">No internet connection</string>
    <string name="choseLicense">Please choose your license</string>
    <string name="choseCity">Please choose city!</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="postalCode">Postal Code</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sealifePlace">Sea life</string>
    <string name="details_reviews">reviews</string>
    <string name="details_depth">Max depth</string>
    <string name="details_visibility">Visibility</string>
    <string name="details_currents">Current</string>
    <string name="details_level">Diver level</string>
    <string name="details_description">Description</string>
    <string name="details_access">Access</string>
    <string name="details_btn_book_now">Contact Dive Centers</string>
    <string name="server_client_id">200652897389-onnv3dgvcnf7bj8dku3psjntif6hiua0.apps.googleusercontent.comm</string>
    <string name="twitter_consumer_key">tT7PhwjwXb8dEXbhQzI529VR4</string>
    <string name="twitter_consumer_secret">C4wijpAOBWWwUVsmtyoMEhWUQD5P6BFulUDTVQGQmrJI32BlaT</string>
    <string name="feedback_text">Do you want to leave feedback on DDScanner?</string>
    <string name="feedback_title">Gongratulations!</string>
    <string name="filter_only_best_rated">Only best-rated</string>
    <string name="filters_filters">Filters</string>
    <string name="btn_save">SAVE</string>
    <string name="object_characteristic">Object</string>
    <string name="photos_title">Photos</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="the_information_is_valid">Is the information valid?</string>
    <string name="tap_on_star_to_review">Tap to rate this dive spot</string>
    <string name="diveSpot">Dive Spot</string>
    <string name="people">People</string>
    <string name="add_photos">Add photos</string>
    <string name="photos">Photos</string>
    <string name="tap_a_flag_to_rate">Tap a flag to rate</string>
    <string name="add_sealife">Add Sea life</string>
    <string name="name">Name</string>
    <string name="habitat">Habitat</string>
    <string name="distribution">Distribution</string>
    <string name="add_photo">Add photo</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="depth">Depth</string>
    <string name="sc_name">Sc Name</string>
    <string name="order">Order</string>
    <string name="scclass">Class</string>
    <string name="reviews">Reviews</string>
    <string name="thanks_for_your_answer">Thanks for your answer!</string>
    <string name="dive_spots">DIVE SPOTS</string>
    <string name="check_in">CHECK IN</string>
    <string name="added">ADDED</string>
    <string name="edited">Edited</string>
    <string name="edit">EDIT</string>
    <string name="max_depth_meters">Max depth (meters)</string>
    <string name="location">Location</string>
    <string name="add_manually">ADD MANUALLY</string>
    <string name="sealife">Sea Life</string>
    <string name="edit_dive_spot">Edit Dive Spot</string>
    <string name="edit_profile">Edit profile</string>
    <string name="created">Created</string>
    <string name="edited_low">Edited</string>
    <string name="favourites">Favorites</string>
    <string name="full_name">Full name</string>
    <string name="about">About</string>
    <string name="write_review">Write review</string>
    <string name="show_all">Show all reviews (%1$s)</string>
    <string name="visibility_pattern">%1$s - %2$s meters</string>
    <string name="peoples_checked_in_here"> people checked in here</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="cancel">cancel</string>
    <string name="question_edit_dive_spot">Do you want to edit this dive spot?</string>
    <string name="no_just_vote_answer">No, just vote</string>
    <string name="dialog_title_check_in">Checked in</string>
    <string name="dialog_check_in_content">This dive spot will be shown in your profile</string>
    <string name="dialog_check_in_no">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="please_connect_to_a_network_to_continue">Please connect to a network to continue</string>
    <string name="refresh">REFRESH</string>
    <string name="privacy_policy_first_part">Your data is very important to us. Accordingly, we have developed this Policy in order to explain you how we collect, disclose and use personal information. The following outlines our privacy policy.</string>
    <string name="privacy_policy_part_2">We will identify the purposes for which personal information is being collected.</string>
    <string name="privacy_policy_part_3">We will collect and use personal information with the objective of fulfilling those purposes specified by us and for other compatible purposes, unless we obtain the consent of the individual or as required by law.</string>
    <string name="privacy_policy_part_4">We will only retain personal information as long as necessary for the fulfillment of those purposes specified by us.</string>
    <string name="privacy_policy_part_5">We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual.</string>
    <string name="privacy_policy_part_6">Personal data should be relevant to the purposes for which it is used and should be accurate, complete, and up-to-date.</string>
    <string name="privacy_policy_part_7">We will protect personal information by reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.</string>
    <string name="privacy_policy_part_8">We will provide customers with all information about our policies and practices relating to the management of personal information.</string>
    <string name="privacy_policy_part_9">The media content that you provide is not considered to be personal information. So under these terms it appears to be the application\'s property that can be used inside the application.</string>
    <string name="privacy_policy_part_10">We are committed to following all these principles in order to ensure that personal information is protected.</string>
    <string name="terms_title_1">1. Terms</string>
    <string name="terms_text_1">By using this app, you are agreeing to be bound by these app Terms and Conditions of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws.</string>
    <string name="terms_title_2">2. Use license</string>
    <string name="terms_text_2">The materials in this app are provided "as is". Deep Dive Scanner makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, Deep Dive Scanner does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials in its apps or otherwise relating to such materials or on any internet web sites linked to its apps.</string>
    <string name="terms_title_3">3. Limitation</string>
    <string name="terms_text_3">In no event shall Deep Dive Scanner or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials in this app, even if Deep Dive Scanner or a Deep Dive Scanner authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</string>
    <string name="terms_title_4">4. Revisions and Errata</string>
    <string name="terms_text_4">The materials appearing in Deep Dive Scanner could include technical, typographical, or photographic errors. Deep Dive Scanner does not warrant that any of these materials are accurate, complete, or current. Deep Dive Scanner may make changes to the materials contained in its app at any time without notice. Deep Dive Scanner does not, however, make any commitment to update the materials.</string>
    <string name="terms_title_5">5. Links</string>
    <string name="terms_text_5">Deep Dive Scanner has not reviewed all of the internet web sites linked to from its app and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Deep Dive Scanner of the site. Use of any such linked site is at the user\'s own risk.</string>
    <string name="terms_title_6">6. Site Terms of Use Modifications</string>
    <string name="terms_text_6">Deep Dive Scanner may revise these terms of use for its app at any time without notice. By using this app you are agreeing to be bound by the then current version of these Terms and Conditions of Use.</string>
    <string name="sorry_connection_lost">Sorry! Connection lost</string>
    <string name="please_refresh_activity">Please, refresh to reconnect</string>
    <string name="enter_your_email_address_below_and_we_ll_send_you_password_reset_instructions">Enter your email address below and we’ll send you password reset instructions</string>
    <string name="ema">Email</string>
    <string name="send_forgot">send</string>
    <string name="forgot_password_btn">Forgot password?</string>
    <string name="checkd_in">Checked in!</string>
    <string name="country_characteristic">Country</string>
    <string name="change">CHANGE</string>
    <string name="add_phone">+ Add phone</string>
    <string name="add_e_mail">+ Add e-mail</string>
    <string name="write_areview_dialog">write a review</string>
    <string name="checked_in_dialog_text">Share a few words about your diving experience here</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="current_password">Current password</string>
</resources>