<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/PrivacyPolicyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_first_part" />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                   style="@style/PrivacyPolicyCircle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrivacyPolicyText"
                    android:text="@string/privacy_policy_part_2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                   style="@style/PrivacyPolicyCircle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrivacyPolicyText"
                    android:text="@string/privacy_policy_part_3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                   style="@style/PrivacyPolicyCircle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrivacyPolicyText"
                    android:text="@string/privacy_policy_part_4"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                   style="@style/PrivacyPolicyCircle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrivacyPolicyText"
                    android:text="@string/privacy_policy_part_5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                   style="@style/PrivacyPolicyCircle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrivacyPolicyText"
                    android:text="@string/privacy_policy_part_6"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                   style="@style/PrivacyPolicyCircle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrivacyPolicyText"
                    android:text="@string/privacy_policy_part_7"/>
            </LinearLayout><LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                   style="@style/PrivacyPolicyCircle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrivacyPolicyText"
                    android:text="@string/privacy_policy_part_8"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView style="@style/PrivacyPolicyCircle" />

                <TextView
                    style="@style/PrivacyPolicyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_part_9" />
            </LinearLayout>
            <TextView
                android:layout_marginTop="8dp"
                style="@style/PrivacyPolicyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_part_10" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>