<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/view_toolbar" />

        <LinearLayout
            android:id="@+id/input_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="37dp"
            android:background="@drawable/email_password_background"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/current_password"
                android:lines="1"
                android:maxLength="32"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:textColor="@color/black_text"
                android:textColorHint="#a3a3a3" />

            <ImageView style="@style/DividerStyleFull" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/new_password"
                android:lines="1"
                android:maxLength="32"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:textColor="@color/black_text"
                android:textColorHint="#a3a3a3" />

            <ImageView style="@style/DividerStyleFull" />

            <EditText
                android:id="@+id/new_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/repeat_new_password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:lines="1"
                android:textColor="@color/black_text"
                android:textColorHint="#a3a3a3" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            style="@style/OrangeButtons"
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/btn_save" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/forgot_password_btn"
            android:textColor="#bbbbbb" />

    </LinearLayout>
</layout>