<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">
    <include layout="@layout/view_toolbar" />
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">
        <TextView
            android:textColor="#a3a3a3"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_address_below_and_we_ll_send_you_password_reset_instructions"
            android:textSize="15sp"
            android:gravity="center" />
        <EditText
            android:id="@+id/email"
            android:maxLength="254"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/email_field_back"
            style="@style/SigningInputStyle"
            android:layout_marginTop="28dp"
            android:hint="@string/ema"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/OrangeButtons"
            android:text="@string/send_forgot"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</LinearLayout>