<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nowifi"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/text"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_no_internet"
            android:textSize="16sp"
            android:textColor="@color/black_text"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_below="@+id/text"
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/please_connect_to_a_network_to_continue"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/btn_retry"
            android:layout_marginTop="200dp"
            style="@style/OrangeButtons"
            android:layout_width="180dp"
            android:layout_below="@+id/text"
            android:text="@string/refresh" />
    </RelativeLayout>
</LinearLayout>